# aigc-kit

./: .gitignore  LICENSE  README.md  llms-full.txt  llms.txt  pyproject.toml
src/aigc_kit/: __init__.py
src/aigc_kit/embedding/: __init__.py  base.py
src/aigc_kit/embedding/providers/: bedrock.py  dashscope.py  stub.py
src/aigc_kit/image/: __init__.py  base.py  client.py
src/aigc_kit/image/providers/: dashscope.py  gemini.py  volcengine.py
src/aigc_kit/llm/: __init__.py  base.py
src/aigc_kit/llm/providers/: _openai_compat.py  bedrock.py  dashscope.py  deepseek.py  gemini.py  moonshot.py  volcengine.py  zhipu.py
src/aigc_kit/storage/: __init__.py  base.py  r2.py
